Реализован каркас приложения ShareIt: сделан рефакторинг кода по итогам ревью